--- a/contact.html
+++ b/contact.html
@@ -35,7 +35,7 @@
         </div>
         <div id="navbar" class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li><a href="inxdex.html">Home</a></li>
+            <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="active"><a href="contact.html">Contact</a></li>
             <li><a href="services.html">Services</a></li>
